2014-05-14  Richard Frith-Macdonald <rfm@gnu.org>

	* EcAlerter.m: fix bug processing alert emails
	* GNUmakefile: bump subminor version number for release
	Version 1.1.2 release

2014-05-08  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.m: add memory commands 'class' and 'list' to record
	allocated instances of a specific class and list them... another
	memory debugging option.
	* GNUmakefile: bump subminor version number for release
	Version 1.1.1 release

2014-05-08  Richard Frith-Macdonald <rfm@gnu.org>

	* GNUmakefile: bump subminor version number for release
	Version 1.1.0: scripting and alarm improvements.

2014-04-27  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.h:
	* EcProcess.m:
	Add +ecInitialDefaults to allow subclasses to easily set and
	modify default configuration values.

2014-03-28  Richard Frith-Macdonald <rfm@gnu.org>

	* EcTest.h:
	* EcTest.m:
	* EcProcess.m:
	* GNUmakefile:
	Add a few simple functions to connect to a process, set/get the
	config of a running process, and issue commands (and get back
	the response) so that regression test software can relatively
	easily exercie an entire system.

2014-03-26  Richard Frith-Macdonald <rfm@gnu.org>

	* EcControl.m: Add option to allow any user to log in.

2014-03-25  Richard Frith-Macdonald <rfm@gnu.org>

	* EcConsole.m: Don't read from stdin whn in non-interactive mode
	* EcProcess.m: Allow up to ten seconds to Contact Command server
	on startup.

2014-03-18  Richard Frith-Macdonald <rfm@gnu.org>

	* ECCL.h:
	* EcCommand.m:
	* EcConsole.m:
	* GNUmakefile:
	Extend Console tool to support non-interactive use for scripting etc.

2014-02-28  Richard Frith-Macdonald <rfm@gnu.org>

	* EcControl.m:
	* ECCL.h:
	Extend system so the Terminate tool can contact the Control server
	and shut down the entire cluster rather than just a singlee host.

2014-02-22  Richard Frith-Macdonald <rfm@gnu.org>

	* EcAlarmDestination.h:
	* EcAlarmDestination.m: