@@ -1,3 +1,9 @@
+2014-05-16  Richard Frith-Macdonald <rfm@gnu.org>
+
+	EcAlarmDestination.m: Perform all connection operations in
+	main thread (forwarding etc) and ensure that we run the
+	current run loop while waiting for startup and shutdown.
+
 2014-05-14  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* EcAlerter.m: fix bug processing alert emails
